--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,14 @@ jobs:
       branch: [dev]
       commands:
         - ./merge_to_preprod.sh
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deployment:
+          requires:
+            - build
+          filters:
+            branches:
+              only: dev
