Circle CI PHP Test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ jobs:
           command: php *.php
   deployment:
     steps:
-      automerge:
-        branch: [dev]
-        commands:
-          - ./merge_to_preprod.sh
+      - automerge:
+          branch: [dev]
+          commands:
+            - ./merge_to_preprod.sh
 workflows:
   version: 2
   build_and_deploy:
