--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,4 +11,22 @@ jobs:
       - run:
           name: PHPLint check
           command: php *.php
-
+  deployment:
+    docker:
+      - image: alpine/git
+    steps:
+      - automerge:
+          branch: [dev]
+          commands:
+            - ./merge_to_preprod.sh
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deployment:
+          requires:
+            - build
+          filters:
+            branches:
+              only: dev
