--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,7 @@ jobs:
     steps:
       - run:
           name: merge
-          commands:
-            - ./merge_to_preprod.sh
+          command: ./merge_to_preprod.sh
 workflows:
   version: 2
   build_and_deploy:
