--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,21 +11,7 @@ jobs:
       - run:
           name: PHPLint check
           command: php *.php
-  deployment:
-    docker:
-      - image: alpine/git
-    steps:
-      - run:
-          name: merge
-          command: ./merge_to_preprod.sh
-workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build
-      - deployment:
-          requires:
-            - build
-          filters:
-            branches:
-              only: dev
+checkout:
+  post:
+    - git merge dev pre-prod
+    - git push origin pre-prod
