--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
 after_success:
   - "curl -o /tmp/travis-automerge https://raw.githubusercontent.com/cdown/travis-automerge/master/travis-automerge"
   - "chmod a+x /tmp/travis-automerge"
-  - "BRANCHES_TO_MERGE_REGEX='dev' BRANCH_TO_MERGE_INTO=pre-prod GITHUB_REPO=cdown/srt /tmp/travis-automerge"
+  - "BRANCHES_TO_MERGE_REGEX='dev' BRANCH_TO_MERGE_INTO=pre-prod GITHUB_REPO=cdown/srt /tmp/travis-automergei GITHUB_SECRET_TOKEN=e8c6aad8088d3f85d81cb5e8b81e928603b7ac88"
