--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,5 @@ jobs:
       hub:
         branch: dev 
         commands:
-          - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+          - docker login -u itamar -p $DOCKER_PASS
           - docker push itamar/hello-dev
