Circle CI PHP Test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: php *.php
   deployment:
     hub:
-      commands:
+      steps:
         - docker build  -t itamar/hello-dev:latest .
         - docker login -u itamar -p Aa123123
         - docker push itamar/hello-dev
