--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,15 @@ jobs:
     docker:
       - image: php
     steps:
-      - docker build  -t itamar/hello-dev:latest .
-      - docker login -u itamar -p Aa123123
-      - docker push itamar/hello-dev
+      - run: 
+          name: docker build
+          command: docker build  -t itamar/hello-dev:latest .
+      - run: 
+          name: docker login
+          command: docker login -u itamar -p Aa123123
+      - run: 
+          name: docker pusj
+          command: docker push itamar/hello-dev
 workflows:
   version: 2
   build-deploy:
