--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
       php:
         version: 5.4.5
     steps:
+      - checkout
       - run: 
           name: docker build
           command: docker build  -t itamar/hello-dev:latest .
