--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2
 jobs:
   build:
-    branch: dev
+    branches:
+      only: dev
     docker:
       - image: php 
     steps:
@@ -13,7 +14,8 @@ jobs:
           name: PHPLint check
           command: php *.php
   deployment:
-    branch: dev
+    branches:
+      only: dev
     machine:
       php:
         version: 5.4.5
