--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,20 @@
 version: 2
 jobs:
-  build:
-    docker:
-      - image: php 
+#  build:
+#    docker:
+#      - image: php 
+#    steps:
+#      - checkout
+#      - run:
+#          name: Greeting
+#          command: echo Hello, world.
+#      - run:
+#          name: PHPLint check
+#          command: php *.php
+  deployment:
+    machine:
+      php:
+        version: 5.4.5
     steps:
       - checkout
       - run:
@@ -11,12 +23,6 @@ jobs:
       - run:
           name: PHPLint check
           command: php *.php
-  deployment:
-    machine:
-      php:
-        version: 5.4.5
-    steps:
-      - checkout
       - run: 
           name: docker build
           command: docker build  -t itamar/hello-dev:latest .
@@ -30,5 +36,5 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build
+#      - build
       - deployment
