Circle CI PHP Test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 #          command: php *.php
   deployment:
     machine:
-      php
+      php:
     steps:
       - checkout
       - run:
