--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,8 @@
 version: 2
 jobs:
-#  build:
-#    docker:
-#      - image: php 
-#    steps:
-#      - checkout
-#      - run:
-#          name: Greeting
-#          command: echo Hello, world.
-#      - run:
-#          name: PHPLint check
-#          command: php *.php
-  deployment:
-    machine:
-      php:
-        version:  7.0.4
+  test:
+    docker:
+      - image: php 
     steps:
       - checkout
       - run:
@@ -22,7 +10,13 @@ jobs:
           command: echo Hello, world.
       - run:
           name: PHPLint check
-          command: /opt/google-cloud-sdk/platform/ext-runtime/php *.php
+          command: php *.php
+  build:
+    machine:
+      php:
+        version:  7.0.4
+    steps:
+      - checkout
       - run: 
           name: docker build
           command: docker build  -t itamar/hello-dev:latest .
@@ -36,5 +30,5 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-#      - build
-      - deployment
+      - test
+      - build
