Circle CI PHP Test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,4 +31,10 @@ workflows:
   build-deploy:
     jobs:
       - test
+        branches:
+          only:
+            - dev
       - build
+        branches:
+          only:
+            - dev
