--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ workflows:
     jobs:
       - test
       - build
-         filters:
-           branches:
-             only:
-              - dev
+#         filters:
+#           branches:
+#             only:
+#              - dev
