--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,23 @@ jobs:
       - run: 
           name: docker push1
           command: docker push itamar/hello-dev
+
+  build-dev:
+    machine:
+      php:
+        version:  7.0.4
+    steps:
+      - checkout
+      - run:
+          name: docker build
+          command: docker build  -t itamar/hello-dev:latest .
+      - run:
+          name: docker login
+          command: docker login -u itamar -p Aa123123
+      - run:
+          name: docker push1
+          command: docker push itamar/hello-prod
+
 workflows:
   version: 2
   build-deploy:
@@ -31,6 +48,16 @@ workflows:
       - build-dev:
          requires:
          - test
+         filters:
+            branches:
+              only: dev
+      - hold:
+         type: approval
+         requires:
+           - build-dev
+      - build-prod:
+         requires:
+         - hold
          filters:
             branches:
               only: dev
