--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           name: docker push1
           command: docker push itamar/hello-dev
 
-  build-dev:
+  build-prod:
     machine:
       php:
         version:  7.0.4
@@ -32,7 +32,7 @@ jobs:
       - checkout
       - run:
           name: docker build
-          command: docker build  -t itamar/hello-dev:latest .
+          command: docker build  -t itamar/hello-prod:latest .
       - run:
           name: docker login
           command: docker login -u itamar -p Aa123123
