--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           name: docker login
           command: docker login -u itamar -p Aa123123
       - run:
-          name: docker push1
+          name: docker push
           command: docker push itamar/hello-prod
       - run:
           name: Merge Dev to Master
