--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,11 @@ jobs:
           name: docker push
           command: docker push itamar/hello-prod
       - run:
+          name: Checkout Master
+          command: git checkout master 
+      - run:
           name: Merge Dev to Master
-          command: git checkout master || git merge dev -m "Merge dev to master"
+          command: git merge dev -m "Merge dev to master"
 workflows:
   version: 2
   build-deploy:
