--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,14 @@ jobs:
           name: Checkout Master
           command: git checkout master
       - run:
-          name: Checkout Master
+          name: Pull Master
           command: git pull
       - run:
           name: Merge Dev to Master
           command: git merge dev -m "Merge dev to master"
+      - run:
+          name: push merge
+          command: git push origin master
 workflows:
   version: 2
   build-deploy:
