--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
           command: git checkout master
       - run:
           name: Pull Master
+          command: git config --global user.email "itamarye@gmail.com"
+      - run:
+          name: Pull Master
           command: git pull
       - run:
           name: Merge Dev to Master
@@ -55,20 +58,20 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - test
-      - build-dev:
-         requires:
-         - test
-         filters:
-            branches:
-              only: dev
-      - hold:
-         type: approval
-         requires:
-           - build-dev
+#      - test
+#      - build-dev:
+#         requires:
+#         - test
+#         filters:
+#            branches:
+#              only: dev
+#      - hold:
+#         type: approval
+#         requires:
+#           - build-dev
       - build-prod:
-         requires:
-         - hold
+#         requires:
+#         - hold
          filters:
             branches:
               only: dev
