--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,51 +30,51 @@ jobs:
         version:  7.0.4
     steps:
       - checkout
+      - run:
+          name: docker build
+          command: docker build  -t itamar/hello-prod:latest .
+      - run:
+          name: docker login
+          command: docker login -u itamar -p Aa123123
+      - run:
+          name: docker push
+          command: docker push itamar/hello-prod
 #      - run:
-#          name: docker build
-#          command: docker build  -t itamar/hello-prod:latest .
+#          name: Checkout Master
+#          command: git checkout master
 #      - run:
-#          name: docker login
-#          command: docker login -u itamar -p Aa123123
+#          name: git config 
+#          command: git config --global user.email "itamarye@gmail.com"
 #      - run:
-#          name: docker push
-#          command: docker push itamar/hello-prod
-      - run:
-          name: Checkout Master
-          command: git checkout master
-      - run:
-          name: git config 
-          command: git config --global user.email "itamarye@gmail.com"
-      - run:
-          name: git config
-          command: git config --global user.name  "itamary"
-      - run:
-          name: Pull Master
-          command: git pull
-      - run:
-          name: Merge Dev to Master
-          command: git merge dev -m "Merge dev to master"
-      - run:
-          name: push merge
-          command: git push origin master
+#          name: git config
+#          command: git config --global user.name  "itamary"
+#      - run:
+#          name: Pull Master
+#          command: git pull
+#      - run:
+#          name: Merge Dev to Master
+#          command: git merge dev -m "Merge dev to master"
+#      - run:
+#          name: push merge
+#          command: git push origin master
 workflows:
   version: 2
   build-deploy:
     jobs:
-#      - test
-#      - build-dev:
-#         requires:
-#         - test
-#         filters:
-#            branches:
-#              only: dev
-#      - hold:
-#         type: approval
-#         requires:
-#           - build-dev
+      - test
+      - build-dev:
+         requires:
+         - test
+         filters:
+            branches:
+              only: dev
+      - hold:
+         type: approval
+         requires:
+           - build-dev
       - build-prod:
-#         requires:
-#         - hold
+         requires:
+           - hold
          filters:
             branches:
               only: dev
